# coreason-economist

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  VIGNETTE.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: components.md  index.md  requirements.md  usage.md
src/coreason_economist/: __init__.py  arbitrageur.py  budget_authority.py  calibration.py  database.py  economist.py  exceptions.py  main.py  models.py  pricer.py  rates.py  server.py  voc.py
src/coreason_economist/utils/: __init__.py  logger.py
tests/: test_arbitrageur.py  test_arbitrageur_budget.py  test_arbitrageur_dynamic.py  test_arbitrageur_granular.py  test_arbitrageur_granular_edge_cases.py  test_architecture_enforcement.py  test_budget_authority.py  test_calibration.py  test_complex_scenarios.py  test_economist.py  test_economist_arbitrage_complex.py  test_economist_arbitrage_integration.py  test_economist_edge_cases.py  test_economist_reconciliation.py  test_economist_reconciliation_complex.py  test_economist_reconciliation_edge_cases.py  test_economist_voc_integration.py  test_economist_voc_integration_complex.py  test_economist_voc_integration_edge_cases.py  test_identity_bound.py  test_main.py  test_models.py  test_new_edge_cases.py  test_observability.py  test_observability_complex.py  test_observability_robustness.py  test_observability_schema.py  test_observability_schema_verification.py  test_pricer.py  test_pricer_injection_edge_cases.py  test_rates.py  test_server.py  test_soft_limits.py  test_soft_limits_complex.py  test_soft_limits_edge_cases.py  test_soft_limits_scenario.py  test_utils.py  test_voc.py  test_voc_edge_cases.py  test_voc_opportunity_cost.py
