[tool.poetry]
name = "coreason_economist"
version = "0.4.1"
description = "is it worth thinking?"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_economist", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
loguru = "^0.7.3"
pydantic = "^2.12.5"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.46"}
asyncpg = "^0.31.0"
pydantic-settings = "^2.12.0"
coreason-identity = "*"
anyio = "^4.12.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.14"
pre-commit = "^4.5.1"
pytest-cov = "^7.0.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.1"
pydantic = "^2.12.5"
pytest-asyncio = "^1.3.0"
types-sqlalchemy = "^1.4.53.38"
types-python-dateutil = "^2.9.0.20260124"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_economist"
version = "0.4.1"
description = "is it worth thinking?"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_economist"
Repository = "https://github.com/CoReason-AI/coreason_economist"
Documentation = "https://github.com/CoReason-AI/coreason_economist"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
